kuber-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuber-pod
  labels:
    app: kubernetes-test
spec:
  # volumes:
  # - name: host-volume
  #   hostPath:
  #     path: /home/docker/pod-volume
  containers:
  - name: kuber-server
    image: kuber-server:latest
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 3000
  serviceAccountName: my-service-account
