kuber-socket-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kuber-socket-pod
  labels:
    app: kubernetes-socket-test
spec:
  restartPolicy: Never
  containers:
  - name: kuber-socket
    image: kuber-socket:latest
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 3001
