kuber-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kubernetes-socket-test
spec:
  selector:
    matchLabels:
      app: kubernetes-socket-test
  serviceName: kubernetes-socket-service
  replicas: 0
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: kubernetes-socket-test
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: kuber-socket
        image: kuber-socket:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001
