kuber-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtual-host-ingress
  namespace: default
spec:
  rules:
  - host: TBD # requires domainname (this is like ProxyPass)
    http:
      paths:
      - backend:
          service:
            name: kuber-service
            port:
              number: 3000
        path: /
        pathType: ImplementationSpecific
